--- a/TicketFlowWeb/Views/Shared/_Layout.cshtml
+++ b/TicketFlowWeb/Views/Shared/_Layout.cshtml
@@ -22,8 +22,8 @@
                 <li class="nav-item active" onclick="showSection('dashboard')">📊 Dashboard</li>
                 <li class="nav-item" onclick="showSection('criar-chamado')">➕ Criar Chamado</li>
                 <li class="nav-item" onclick="showSection('ver-chamados')">📋 Ver Chamados</li>
-                <li class="nav-item" onclick="showSection('meus-chamados')">👤 Meus Chamados</li>
-                <li class="nav-item" onclick="showSection('faq')">❓ FAQ e Soluções</li>
+                @*<li class="nav-item" onclick="showSection('meus-chamados')">👤 Meus Chamados</li>
+                <li class="nav-item" onclick="showSection('faq')">❓ FAQ e Soluções</li>*@
             </ul>
         </div>
 
