--- a/TicketFlowWeb/Views/Home/Index.cshtml
+++ b/TicketFlowWeb/Views/Home/Index.cshtml
@@ -2,13 +2,13 @@
     ViewData["Title"] = "Dashboard";
 }
 
-<div class="header">
+@*<div class="header">
     <h1>Sistema de Gestão de Chamados</h1>
     <div class="user-info">
         <span>João Silva</span>
         <div class="user-avatar">👤</div>
     </div>
-</div>
+</div>*@
 
 <!-- Dashboard Section -->
 <!-- Dashboard Section -->
